:arrow_up: Run the Storybook v7 upgrade tool
All of these changes are made through the automated update tool.

--- a/src/openforms/js/components/admin/forms/ComponentSelection.stories.mdx
+++ b/src/openforms/js/components/admin/forms/ComponentSelection.stories.mdx
@@ -20,7 +20,7 @@ export const Template = ({availableComponents, ...args}) => (
 
 ## Presentation
 
-<!-- FIXME: onChange doesn't seem to work in canvas -->
+{/* FIXME: onChange doesn't seem to work in canvas */}
 
 <Canvas>
   <Story
