--- a/src/openforms/js/components/admin/forms/Select.stories.mdx
+++ b/src/openforms/js/components/admin/forms/Select.stories.mdx
@@ -12,7 +12,7 @@ export const Template = args => <Select {...args} />;
 
 ## Presentation
 
-<!-- FIXME: Changing the value doesn't seem to work? -->
+{/* FIXME: Changing the value doesn't seem to work? */}
 
 <Canvas>
   <Story
