:alien: [#3620] Fix stories broken due to v7 upgrade

--- a/src/openforms/js/components/admin/forms/ActionButton.mdx
+++ b/src/openforms/js/components/admin/forms/ActionButton.mdx
@@ -11,9 +11,7 @@ The default Django admin action buttons
 
 ## Generic button
 
-<Canvas>
-  <Story of={ActionButtonStories.ActionButtonDefault} />
-</Canvas>
+<Canvas of={ActionButtonStories.ActionButtonDefault} />
 
 <ArgsTable of={ActionButton} />
 
@@ -21,24 +19,12 @@ The default Django admin action buttons
 
 ### Submit
 
-<Canvas>
-  <Story of={ActionButtonStories.SubmitActionStory} />
-</Canvas>
-
-<ArgsTable of={SubmitAction} />
+<Canvas of={ActionButtonStories.SubmitActionStory} />
 
 ### Save and add another
 
-<Canvas>
-  <Story of={ActionButtonStories.AddAnotherActionStory} />
-</Canvas>
-
-<ArgsTable of={AddAnotherAction} />
+<Canvas of={ActionButtonStories.AddAnotherActionStory} />
 
 ### Save and edit
 
-<Canvas>
-  <Story of={ActionButtonStories.ContinueEditingActionStory} />
-</Canvas>
-
-<ArgsTable of={ContinueEditingAction} />
+<Canvas of={ActionButtonStories.ContinueEditingActionStory} />
