--- a/src/openforms/js/components/admin/forms/ActionButton.mdx
+++ b/src/openforms/js/components/admin/forms/ActionButton.mdx
@@ -1,4 +1,4 @@
-import {ArgsTable, Canvas, Meta, Story} from '@storybook/addon-docs';
+import {ArgTypes, Canvas, Meta} from '@storybook/addon-docs';
 
 import {ActionButton, AddAnotherAction, ContinueEditingAction, SubmitAction} from './ActionButton';
 import * as ActionButtonStories from './ActionButton.stories';
@@ -13,7 +13,7 @@ The default Django admin action buttons
 
 <Canvas of={ActionButtonStories.ActionButtonDefault} />
 
-<ArgsTable of={ActionButton} />
+<ArgTypes of={ActionButton} />
 
 ## Pre-built variants
 
