--- a/src/openforms/js/components/admin/form_design/variables/ServiceFetchConfigurationPicker.mdx
+++ b/src/openforms/js/components/admin/form_design/variables/ServiceFetchConfigurationPicker.mdx
@@ -1,4 +1,4 @@
-import {ArgsTable, Canvas, Meta, Story} from '@storybook/addon-docs';
+import {ArgTypes, Canvas, Meta} from '@storybook/addon-docs';
 
 import ServiceFetchConfigurationPicker from './ServiceFetchConfigurationPicker';
 import * as ServiceFetchConfigurationPickerStories from './ServiceFetchConfigurationPicker.stories';
@@ -15,10 +15,8 @@ variable using the same configuration.
 
 **Warning**: this component requires the following contexts: `FormLogicContext`.
 
-<Canvas>
-  <Story of={ServiceFetchConfigurationPickerStories.Blank} />
-</Canvas>
+<Canvas of={ServiceFetchConfigurationPickerStories.Blank} />
 
 ### Props
 
-<ArgsTable of={ServiceFetchConfigurationPicker} />
+<ArgTypes of={ServiceFetchConfigurationPicker} />
