--- a/src/openforms/js/components/admin/forms/ArrayInput.mdx
+++ b/src/openforms/js/components/admin/forms/ArrayInput.mdx
@@ -1,4 +1,4 @@
-import {ArgsTable, Canvas, Meta, Story} from '@storybook/addon-docs';
+import {ArgTypes, Canvas, Meta} from '@storybook/addon-docs';
 
 import ArrayInput from './ArrayInput';
 import * as ArrayInputStories from './ArrayInput.stories';
@@ -11,10 +11,8 @@ Wrapper for admin arrayfield input
 
 ## Presentation
 
-<Canvas>
-  <Story of={ArrayInputStories.Default} />
-</Canvas>
+<Canvas of={ArrayInputStories.Default} />
 
 ### Props
 
-<ArgsTable of={ArrayInput} />
+<ArgTypes of={ArrayInput} />
