--- a/src/openforms/js/components/admin/forms/ErrorList.mdx
+++ b/src/openforms/js/components/admin/forms/ErrorList.mdx
@@ -1,4 +1,4 @@
-import {ArgsTable, Canvas, Meta, Story} from '@storybook/addon-docs';
+import {ArgTypes, Canvas, Meta} from '@storybook/addon-docs';
 
 import ErrorList from './ErrorList';
 import * as ErrorListStories from './ErrorList.stories';
@@ -13,22 +13,16 @@ Wrapper for errors in the admin
 
 ### List of error-strings
 
-<Canvas>
-  <Story of={ErrorListStories.ListOfErrorStrings} />
-</Canvas>
+<Canvas of={ErrorListStories.ListOfErrorStrings} />
 
 ### Empty errorlist
 
-<Canvas>
-  <Story of={ErrorListStories.NoErrors} />
-</Canvas>
+<Canvas of={ErrorListStories.NoErrors} />
 
 ### Single error
 
-<Canvas>
-  <Story of={ErrorListStories.SingleError} />
-</Canvas>
+<Canvas of={ErrorListStories.SingleError} />
 
 ### Props
 
-<ArgsTable of={ErrorList} />
+<ArgTypes of={ErrorList} />
