--- a/src/openforms/js/components/admin/forms/FormRow.mdx
+++ b/src/openforms/js/components/admin/forms/FormRow.mdx
@@ -1,4 +1,4 @@
-import {ArgsTable, Canvas, Meta, Story} from '@storybook/addon-docs';
+import {ArgTypes, Canvas, Meta} from '@storybook/addon-docs';
 
 import FormRow from './FormRow';
 import * as FormRowStories from './FormRow.stories';
@@ -13,16 +13,12 @@ field error lists.
 
 ## Single field
 
-<Canvas>
-  <Story of={FormRowStories.SingleField} />
-</Canvas>
+<Canvas of={FormRowStories.SingleField} />
 
 ## Multiple fields
 
-<Canvas>
-  <Story of={FormRowStories.MultipleFields} />
-</Canvas>
+<Canvas of={FormRowStories.MultipleFields} />
 
 ### Props
 
-<ArgsTable of={FormRow} />
+<ArgTypes of={FormRow} />
