--- a/src/openforms/js/components/admin/forms/JsonWidget.mdx
+++ b/src/openforms/js/components/admin/forms/JsonWidget.mdx
@@ -1,4 +1,4 @@
-import {ArgsTable, Canvas, Meta, Story} from '@storybook/addon-docs';
+import {ArgTypes, Canvas, Meta} from '@storybook/addon-docs';
 
 import JsonWidget from './JsonWidget';
 import * as JsonWidgetStories from './JsonWidget.stories';
@@ -11,10 +11,8 @@ Input widget for form JsonLogic
 
 ## Presentation
 
-<Canvas>
-  <Story of={JsonWidgetStories.Default} />
-</Canvas>
+<Canvas of={JsonWidgetStories.Default} />
 
 ### Props
 
-<ArgsTable of={JsonWidget} />
+<ArgTypes of={JsonWidget} />
