--- a/src/openforms/js/components/admin/forms/RadioList.mdx
+++ b/src/openforms/js/components/admin/forms/RadioList.mdx
@@ -1,4 +1,4 @@
-import {ArgsTable, Canvas, Meta, Story} from '@storybook/addon-docs';
+import {ArgTypes, Canvas, Meta} from '@storybook/addon-docs';
 
 import RadioList from './RadioList';
 import * as RadioListStories from './RadioList.stories';
@@ -13,10 +13,8 @@ TODO: check if this is really a standard django component.
 
 ## Presentation
 
-<Canvas>
-  <Story of={RadioListStories.Default} />
-</Canvas>
+<Canvas of={RadioListStories.Default} />
 
 ### Props
 
-<ArgsTable of={RadioList} />
+<ArgTypes of={RadioList} />
