--- a/src/openforms/js/components/admin/forms/Select.mdx
+++ b/src/openforms/js/components/admin/forms/Select.mdx
@@ -1,4 +1,4 @@
-import {ArgsTable, Canvas, Meta, Story} from '@storybook/addon-docs';
+import {ArgTypes, Canvas, Meta} from '@storybook/addon-docs';
 
 import Select from './Select';
 import * as SelectStories from './Select.stories';
@@ -11,10 +11,8 @@ Wrapper for select component
 
 ## Presentation
 
-<Canvas>
-  <Story of={SelectStories.Default} />
-</Canvas>
+<Canvas of={SelectStories.Default} />
 
 ### Props
 
-<ArgsTable of={Select} />
+<ArgTypes of={Select} />
