--- a/src/openforms/js/components/admin/forms/SubmitRow.mdx
+++ b/src/openforms/js/components/admin/forms/SubmitRow.mdx
@@ -1,4 +1,4 @@
-import {ArgsTable, Canvas, Meta, Story} from '@storybook/addon-docs';
+import {ArgTypes, Canvas, Meta} from '@storybook/addon-docs';
 
 import SubmitRow from './SubmitRow';
 import * as SubmitRowStories from './SubmitRow.stories';
@@ -11,10 +11,8 @@ Wrapper for multiple submit/action buttons
 
 ## Presentation
 
-<Canvas>
-  <Story of={SubmitRowStories.Default} />
-</Canvas>
+<Canvas of={SubmitRowStories.Default} />
 
 ### Props
 
-<ArgsTable of={SubmitRow} />
+<ArgTypes of={SubmitRow} />
