--- a/src/openforms/js/components/admin/modals/Modal.mdx
+++ b/src/openforms/js/components/admin/modals/Modal.mdx
@@ -1,4 +1,4 @@
-import {ArgsTable, Canvas, Meta, Story} from '@storybook/addon-docs';
+import {ArgTypes, Canvas, Meta} from '@storybook/addon-docs';
 
 import Modal from './Modal';
 import * as ModalStories from './Modal.stories';
@@ -16,12 +16,8 @@ should NOT be used in real application code but exist solely for Storybook purpo
 
 ## Props
 
-<ArgsTable of={Modal} />
+<ArgTypes of={Modal} />
 
-<Canvas>
-  <Story of={ModalStories.Open} />
-</Canvas>
+<Canvas of={ModalStories.Open} />
 
-<Canvas>
-  <Story of={ModalStories.WithoutTitle} />
-</Canvas>
+<Canvas of={ModalStories.WithoutTitle} />
