:globe_with_meridians: [#3403] Extract frontend translations

--- a/src/openforms/js/lang/en.json
+++ b/src/openforms/js/lang/en.json
@@ -764,6 +764,11 @@
     "description": "Payment provider fieldset title",
     "originalDefault": "Payment provider"
   },
+  "L97GKs": {
+    "defaultMessage": "Optional theme to use for styling.",
+    "description": "Form theme field help text",
+    "originalDefault": "Optional theme to use for styling."
+  },
   "LHBcNe": {
     "defaultMessage": "Variable definition",
     "description": "JSON editor: complex variable definition title",
@@ -1888,6 +1893,11 @@
     "defaultMessage": "History",
     "description": "History link button",
     "originalDefault": "History"
+  },
+  "vNRiMn": {
+    "defaultMessage": "Theme",
+    "description": "Form theme field label",
+    "originalDefault": "Theme"
   },
   "vQME+l": {
     "defaultMessage": "Create a new form definition",
