--- a/src/openforms/js/lang/en.json
+++ b/src/openforms/js/lang/en.json
@@ -64,6 +64,11 @@
     "description": "Form configuration fieldset title",
     "originalDefault": "Form configuration"
   },
+  "10KWbo": {
+    "defaultMessage": "BRP Personen processing header value",
+    "description": "Form 'BRP Personen processing header value' field label",
+    "originalDefault": "BRP Personen processing header value"
+  },
   "1ArmQ5": {
     "defaultMessage": "Confirm",
     "description": "Camunda complex process variables confirm button",
@@ -644,6 +649,11 @@
     "description": "Form slug field help text",
     "originalDefault": "Slug of the form, used in URLs"
   },
+  "HXqhlN": {
+    "defaultMessage": "BRP Personen purpose limitation header value",
+    "description": "Form 'BRP Personen purpose limitation header value' field label",
+    "originalDefault": "BRP Personen purpose limitation header value"
+  },
   "Hfdfv2": {
     "defaultMessage": "Which version of the process definition to start. The latest version is used if not specified.",
     "description": "Camunda 'process definition version' help text",
@@ -734,6 +744,11 @@
     "description": "No login required for formstep",
     "originalDefault": "Component {label} requires login, but this form step doesn't have the login marked as required."
   },
+  "KClY/2": {
+    "defaultMessage": "Processing",
+    "description": "Form processing fieldset title",
+    "originalDefault": "Processing"
+  },
   "KIy7Wr": {
     "defaultMessage": "Name/title of the form",
     "description": "Form name field help text",
@@ -768,6 +783,11 @@
     "defaultMessage": "Optional theme to use for styling.",
     "description": "Form theme field help text",
     "originalDefault": "Optional theme to use for styling."
+  },
+  "LD3weJ": {
+    "defaultMessage": "Advanced configuration",
+    "description": "Advanced configuration tab title",
+    "originalDefault": "Advanced configuration"
   },
   "LHBcNe": {
     "defaultMessage": "Variable definition",
@@ -1228,6 +1248,11 @@
     "defaultMessage": "Previous text",
     "description": "Form step previous text label",
     "originalDefault": "Previous text"
+  },
+  "ZP5B/v": {
+    "defaultMessage": "The processing (\"verwerking\") for queries to the BRP Persoon API.",
+    "description": "Form 'BRP Personen processing header value' field help text",
+    "originalDefault": "The processing (\"verwerking\") for queries to the BRP Persoon API."
   },
   "ZdZ2Mb": {
     "defaultMessage": "Set the registration backend to use for the submission",
@@ -1704,6 +1729,11 @@
     "description": "All Submissions Removal Limit help text",
     "originalDefault": "Amount of days when all submissions of this form will be permanently deleted. Leave blank to use value in General Configuration."
   },
+  "nmUEDS": {
+    "defaultMessage": "The purpose limitation (\"doelbinding\") for queries to the BRP Persoon API.",
+    "description": "Form 'BRP Personen purpose limitation header value' field help text",
+    "originalDefault": "The purpose limitation (\"doelbinding\") for queries to the BRP Persoon API."
+  },
   "o8CfuS": {
     "defaultMessage": "String",
     "description": "JSON variable type \"string\" representation",
@@ -1733,6 +1763,11 @@
     "defaultMessage": "How successful submissions of this form will be removed after the limit. Leave blank to use value in General Configuration.",
     "description": "Successful Submissions Removal Method help text",
     "originalDefault": "How successful submissions of this form will be removed after the limit. Leave blank to use value in General Configuration."
+  },
+  "p+NeER": {
+    "defaultMessage": "No advanced configuration is available for this form.",
+    "description": "Form advanced configuration fallback message",
+    "originalDefault": "No advanced configuration is available for this form."
   },
   "p18yml": {
     "defaultMessage": "Complex process variables",
