:lipstick: [#3049] Fix markup and styling of form fields
* Fixed missing (new) class name in react components to apply
  inline labels + fields
* Override django admin styling to not vertically stretch input fields
  for labels longer than 160px that wrap unto the next line
* Override checkbox styling to vertically center checkbox + label
  instead of the weird offsets we otherwise have.

It's probably wise to re-do the admin overrides implementation from
vanilla admin CSS again to see what is actually still needed, but
ideally we'd have visual regression testing set up for all involved
components.

--- a/src/openforms/js/lang/nl.json
+++ b/src/openforms/js/lang/nl.json
@@ -1754,7 +1754,7 @@
     "originalDefault": "years"
   },
   "iq0ppL": {
-    "defaultMessage": "[EXPERIMENTEEL] Gebruik de nieuwe afspraakformulierenimplementatie.",
+    "defaultMessage": "Bij het inschakelen van de afsprakenmodus doorloopt de gebruiker een vaste flow.",
     "description": "Form appointment enabled field help text",
     "originalDefault": "Experimental mode. Indicates whether appointments are enabled for this form."
   },
