:memo: [#3855] Add stories

--- a/src/openforms/js/components/admin/form_design/logic/actions/dmn/DMNActionConfig.mdx
+++ b/src/openforms/js/components/admin/form_design/logic/actions/dmn/DMNActionConfig.mdx
@@ -8,7 +8,7 @@ import * as DMNActionConfigStories from './DMNActionConfig.stories';
 # Configuration for the DMN evaluation action
 
 <Canvas>
-  <Story of={DMNActionConfigStories.withInitialValues} />
+  <Story of={DMNActionConfigStories.Empty} />
 </Canvas>
 
 ## Props
