--- a/src/openforms/js/lang/nl.json
+++ b/src/openforms/js/lang/nl.json
@@ -39,6 +39,11 @@
     "description": "Locations Component field label",
     "originalDefault": "Locations Component"
   },
+  "/fAEsY": {
+    "defaultMessage": "Submission report CSV informatieobjecttype",
+    "description": "Objects API registration options \"Submission report CSV informatieobjecttype\" label",
+    "originalDefault": "Submission report CSV informatieobjecttype"
+  },
   "/hIJ8m": {
     "defaultMessage": "Datum veld",
     "description": "Dates Component field label",
@@ -189,6 +194,11 @@
     "defaultMessage": "Naam",
     "description": "Form name field label",
     "originalDefault": "Name"
+  },
+  "51k2La": {
+    "defaultMessage": "JSON content field",
+    "description": "Objects API registration options \"JSON content field\" label",
+    "originalDefault": "JSON content field"
   },
   "5AC1+x": {
     "defaultMessage": "De ingevulde veldwaarde wordt gebruikt als waarde voor de procesvariabele.",
@@ -397,6 +407,11 @@
     "defaultMessage": "Bewaartermijn voor niet voltooide inzendingen inzendingen",
     "description": "Errored Submissions Removal Limit field label",
     "originalDefault": "Errored Submissions Removal Limit"
+  },
+  "A/vedA": {
+    "defaultMessage": "JSON template for the body of the request sent to the Objects API.",
+    "description": "Objects API registration options \"JSON content field\" description",
+    "originalDefault": "JSON template for the body of the request sent to the Objects API."
   },
   "A1tDIH": {
     "defaultMessage": "Naam",
@@ -735,6 +750,11 @@
     "description": "Errored Submissions Removal Limit help text",
     "originalDefault": "Amount of days errored submissions of this form will remain before being removed. Leave blank to use value in General Configuration."
   },
+  "HKA7Ic": {
+    "defaultMessage": "Productaanvraag type",
+    "description": "Objects API registration options \"Productaanvraag type\" label",
+    "originalDefault": "Productaanvraag type"
+  },
   "HXE3Mm": {
     "defaultMessage": "URL-deel van het formulier.",
     "description": "Form slug field help text",
@@ -990,6 +1010,11 @@
     "description": "Locations Component field help text",
     "originalDefault": "Component where locations for an appointment will be shown"
   },
+  "NwxORf": {
+    "defaultMessage": "Upload submission CSV",
+    "description": "Objects API registration options \"Upload submission CSV\" label",
+    "originalDefault": "Upload submission CSV"
+  },
   "O/wKJh": {
     "defaultMessage": "Waarde",
     "description": "JSON (primitive) value label",
@@ -1149,6 +1174,11 @@
     "description": "Variable table initial value title",
     "originalDefault": "Initial value"
   },
+  "RrjozJ": {
+    "defaultMessage": "URL that points to the ProductAanvraag objecttype in the Objecttypes API. The objecttype should have the following three attributes: \"submission_id\", \"type\" (the type of productaanvraag) and \"data\" (the submitted form data)",
+    "description": "Objects API registration options \"Objecttype\" description",
+    "originalDefault": "URL that points to the ProductAanvraag objecttype in the Objecttypes API. The objecttype should have the following three attributes: \"submission_id\", \"type\" (the type of productaanvraag) and \"data\" (the submitted form data)"
+  },
   "RvJXSo": {
     "defaultMessage": "zet de waarde van een variabele/component",
     "description": "action type \"variable\" label",
@@ -1244,6 +1274,11 @@
     "description": "option \"disabled\" of statement checkbox configuration",
     "originalDefault": "Do not ask"
   },
+  "U/t6b+": {
+    "defaultMessage": "Variables Mapping",
+    "description": "Objects API registration backend options 'Variables Mapping' tab label",
+    "originalDefault": "Variables Mapping"
+  },
   "UHlGZJ": {
     "defaultMessage": "Aanduiding van de mate waarin het zaakdossier van de ZAAK voor de openbaarheid bestemd is. Dit wordt toegepast op de zaakdocumenten die aangemaakt worden.",
     "description": "Confidentiality",
@@ -1321,6 +1356,11 @@
     "description": "Variable table prefill plugin title",
     "originalDefault": "Prefill plugin"
   },
+  "WnKF/i": {
+    "defaultMessage": "URL that points to the INFORMATIEOBJECTTYPE in the Catalogi API to be used for the submission attachments",
+    "description": "Objects API registration options \"Attachment informatieobjecttype\" description",
+    "originalDefault": "URL that points to the INFORMATIEOBJECTTYPE in the Catalogi API to be used for the submission attachments"
+  },
   "Wz5QZo": {
     "defaultMessage": "Actief",
     "description": "Form list 'active' column header",
@@ -1340,6 +1380,11 @@
     "defaultMessage": "Ongeldige JSON-logic expressie. Zie https://jsonlogic.com/operations.html voor beschikbare operaties.",
     "description": "Advanced logic rule invalid JSON-logic message",
     "originalDefault": "Invalid JSON logic expression"
+  },
+  "XPEv9r": {
+    "defaultMessage": "Legacy",
+    "description": "Objects API registration backend options 'Legacy' tab label",
+    "originalDefault": "Legacy"
   },
   "XPLnIL": {
     "defaultMessage": "Registratie-instellingen bewerken",
@@ -1390,6 +1435,11 @@
     "defaultMessage": "Item toevoegen",
     "description": "JSON editor: add array value button",
     "originalDefault": "Add item"
+  },
+  "Yyvvx1": {
+    "defaultMessage": "URL that points to the INFORMATIEOBJECTTYPE in the Catalogi API to be used for the submission report CSV",
+    "description": "Objects API registration options \"Submission report CSV informatieobjecttype\" description",
+    "originalDefault": "URL that points to the INFORMATIEOBJECTTYPE in the Catalogi API to be used for the submission report CSV"
   },
   "YzLSHY": {
     "defaultMessage": "Weet u zeker dat u dit wilt verwijderen?",
@@ -1588,10 +1638,20 @@
     "description": "data type date",
     "originalDefault": "Date"
   },
+  "dwkDsV": {
+    "defaultMessage": "Version of the objecttype in the Objecttypes API",
+    "description": "Objects API registration options \"Objecttype version\" description",
+    "originalDefault": "Version of the objecttype in the Objecttypes API"
+  },
   "eBk+W0": {
     "defaultMessage": "Beheer procesvariabelen",
     "description": "Camunda process var selection modal title",
     "originalDefault": "Manage process variables"
+  },
+  "eBtStW": {
+    "defaultMessage": "URL that points to the INFORMATIEOBJECTTYPE in the Catalogi API to be used for the submission report PDF",
+    "description": "Objects API registration options \"Submission report PDF informatieobjecttype\" description",
+    "originalDefault": "URL that points to the INFORMATIEOBJECTTYPE in the Catalogi API to be used for the submission report PDF"
   },
   "eJEu3L": {
     "defaultMessage": "Weet u zeker dat u deze regel wil verwijderen?",
@@ -1602,6 +1662,11 @@
     "defaultMessage": "Geavanceerde opties",
     "description": "Logic rule advanced options icon title",
     "originalDefault": "Advanced options"
+  },
+  "eR8wGd": {
+    "defaultMessage": "RSIN of organization, which creates the INFORMATIEOBJECT",
+    "description": "Objects API registration options \"Organisation RSIN\" description",
+    "originalDefault": "RSIN of organization, which creates the INFORMATIEOBJECT"
   },
   "eU7+uS": {
     "defaultMessage": "Bevestigen",
@@ -1632,6 +1697,11 @@
     "defaultMessage": "Prijslogica",
     "description": "Dynamic pricing fieldset title",
     "originalDefault": "Pricing logic"
+  },
+  "fVNaJK": {
+    "defaultMessage": "Objecttype version",
+    "description": "Objects API registration options \"Objecttype version\" label",
+    "originalDefault": "Objecttype version"
   },
   "fWcg7I": {
     "defaultMessage": "Sleutel-waarde paar (object)",
@@ -1733,6 +1803,11 @@
     "description": "Manage complex process vars configure column title",
     "originalDefault": "Configure"
   },
+  "hwD3q9": {
+    "defaultMessage": "Indicates whether or not the submission CSV should be uploaded as a Document in Documenten API and attached to the ProductAanvraag",
+    "description": "Objects API registration options \"Upload submission CSV\" description",
+    "originalDefault": "Indicates whether or not the submission CSV should be uploaded as a Document in Documenten API and attached to the ProductAanvraag"
+  },
   "hzx+WF": {
     "defaultMessage": "Interne naam",
     "description": "Form name field label",
@@ -1742,6 +1817,16 @@
     "defaultMessage": "Tabnaam",
     "description": "Name of the tab in the Form admin",
     "originalDefault": "Tab name"
+  },
+  "iHpAYZ": {
+    "defaultMessage": "This template is evaluated with the submission data and the resulting JSON is sent to the objects API with a PATCH to update the payment field.",
+    "description": "Objects API registration options \"Payment status update JSON template\" description",
+    "originalDefault": "This template is evaluated with the submission data and the resulting JSON is sent to the objects API with a PATCH to update the payment field."
+  },
+  "iNmPDd": {
+    "defaultMessage": "Attachment informatieobjecttype",
+    "description": "Objects API registration options \"Attachment informatieobjecttype\" label",
+    "originalDefault": "Attachment informatieobjecttype"
   },
   "iZESbd": {
     "defaultMessage": "is kleiner dan",
@@ -1763,10 +1848,20 @@
     "description": "form step label in nav",
     "originalDefault": "{name} [new]"
   },
+  "j7rEgn": {
+    "defaultMessage": "Submission report PDF informatieobjecttype",
+    "description": "Objects API registration options \"Submission report PDF informatieobjecttype\" label",
+    "originalDefault": "Submission report PDF informatieobjecttype"
+  },
   "jARYB7": {
     "defaultMessage": "(Herbruikbare) stapgegevens",
     "description": "Form definition module title",
     "originalDefault": "Form definition"
+  },
+  "jCUorM": {
+    "defaultMessage": "Something went wrong when fectching the available Objecttypes and versions",
+    "description": "Objects API registrations options API error",
+    "originalDefault": "Something went wrong when fectching the available Objecttypes and versions"
   },
   "jU/t8O": {
     "defaultMessage": "Wijzig complexe waarde",
@@ -1828,10 +1923,20 @@
     "description": "component property \"disabled\" label",
     "originalDefault": "disabled"
   },
+  "kQtrKX": {
+    "defaultMessage": "The type of ProductAanvraag",
+    "description": "Objects API registration options \"Productaanvraag type\" description",
+    "originalDefault": "The type of ProductAanvraag"
+  },
   "koVh3m": {
     "defaultMessage": "Categorie",
     "description": "Form category field label",
     "originalDefault": "Category"
+  },
+  "l/mtou": {
+    "defaultMessage": "Payment status update JSON template",
+    "description": "Objects API registration options \"Payment status update JSON template\" label",
+    "originalDefault": "Payment status update JSON template"
   },
   "l1fi1t": {
     "defaultMessage": "(ontbrekende informatie)",
@@ -2074,6 +2179,11 @@
     "description": "Variable table data type title",
     "originalDefault": "Data type"
   },
+  "rJTe9U": {
+    "defaultMessage": "Objecttype",
+    "description": "Objects API registration options \"Objecttype\" label",
+    "originalDefault": "Objecttype"
+  },
   "rTafvA": {
     "defaultMessage": "Kommagetal (float)",
     "description": "data type float",
@@ -2109,6 +2219,11 @@
     "defaultMessage": "{varCount, plural, =0 {} one {(1 variabele gekoppeld)} other {({varCount} variabelen gekoppeld)} }",
     "description": "Managed mappings state feedback",
     "originalDefault": "{varCount, plural, =0 {} one {(1 variable mapped)} other {({varCount} variables mapped)} }"
+  },
+  "sptpzv": {
+    "defaultMessage": "Switching to the new registration options will remove the existing JSON templates. You will also not be able to save the form until the variables are correctly mapped. Are you sure you want to continue?",
+    "description": "Objects API registration backend: v2 switch warning message",
+    "originalDefault": "Switching to the new registration options will remove the existing JSON templates. You will also not be able to save the form until the variables are correctly mapped. Are you sure you want to continue?"
   },
   "t9+e9k": {
     "defaultMessage": "Ben je zeker dat je deze koppeling wil verwijderen?",
@@ -2299,6 +2414,11 @@
     "defaultMessage": "Actie",
     "description": "Action column header",
     "originalDefault": "Action"
+  },
+  "zF8YEc": {
+    "defaultMessage": "Organisation RSIN",
+    "description": "Objects API registration options \"Organisation RSIN\" label",
+    "originalDefault": "Organisation RSIN"
   },
   "zGMQ75": {
     "defaultMessage": "Gebruikersvariabelen",
